Remove bad java_opts